# flutter_rust_bridge_template

./: .flutter_rust_bridge.yml  .gitignore  .metadata  .pubignore  LICENSE-MIT  NOTICE  README.md  create-library.sh  flutter_rust_bridge.yml  justfile  nginx.conf  pubspec.yaml  remove-library.sh
.github/: dependabot.yml
.github/workflows/: ci.yaml  stale.yaml
android/: build.gradle
android/app/: build.gradle
example/: .metadata  pubspec.yaml
example/lib/: main.dart
ios/: flutter_rust_bridge_template.podspec
ios/Classes/: FlutterRustBridgeTemplate.h  FlutterRustBridgeTemplate.m
ios/Flutter/: Generated.xcconfig  flutter_export_environment.sh
ios/Runner/: Info.plist  bridge.h
ios/Runner.xcodeproj/: project.pbxproj
ios/native.xcframework/: Info.plist
lib/: bridge_definitions.dart  bridge_generated.d.dart  bridge_generated.dart  bridge_generated.io.dart  bridge_generated.web.dart  ffi.dart  ffi_web.dart  flutter_rust_bridge_template.dart  frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart  main.dart
lib/api/: entry.dart
lib/src/: bridge_generated.dart  bridge_generated.io.dart  ffi.dart
linux/: CMakeLists.txt  rust.cmake
macos/: flutter_rust_bridge_template.podspec
native/: Cargo.toml  build.rs
rust/: Cargo.toml
rust/src/: api.rs  bridge.io.rs  bridge.rs  bridge.web.rs  lib.rs
rust/src/api/: entry.rs
script/: build_android.sh  build_ios.sh  build_macos.sh  build_windows.sh  install_dev_env.sh
test/: widget_test.dart
web/: index.html  manifest.json  native.js  native_bg.wasm
windows/: CMakeLists.txt
(+22 files in other folders)
