[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
anyhow = "1"
flutter_rust_bridge = "2.0.0-dev.9"

[target.'cfg(target_family = "wasm")'.dependencies]
wasm-bindgen = "0.2"
